<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright 2026 The Chromium Authors
Use of this source code is governed by a BSD-style license that can be
found in the LICENSE file.
-->
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@macro/default_bg_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:text="@string/bricks_java_page_header"
            android:textAppearance="@style/TextAppearance.Headline" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/bricks_java_page_section_java"
            android:textAppearance="@style/TextAppearance.Headline" />

        <org.chromium.components.browser_ui.widget.MaterialSwitchWithText
            android:id="@+id/java_switch_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bricks_java_switch_enabled_on" />

        <org.chromium.components.browser_ui.widget.MaterialSwitchWithText
            android:id="@+id/java_switch_text_disabled_on"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bricks_java_switch_disabled_on" />

        <org.chromium.components.browser_ui.widget.MaterialSwitchWithText
            android:id="@+id/java_switch_text_disabled_off"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bricks_java_switch_disabled_off" />

        <org.chromium.components.browser_ui.widget.MaterialSwitchWithTitleAndSummary
            android:id="@+id/java_switch_title_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="8dp"
            android:text="@string/bricks_java_page_section_compose"
            android:textAppearance="@style/TextAppearance.Headline" />

        <org.chromium.chrome.browser.bricks.switches.ComposeMaterialSwitchWithText
            android:id="@+id/compose_switch_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bricks_java_switch_enabled_on" />

        <org.chromium.chrome.browser.bricks.switches.ComposeMaterialSwitchWithText
            android:id="@+id/compose_switch_text_disabled_on"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bricks_java_switch_disabled_on" />

        <org.chromium.chrome.browser.bricks.switches.ComposeMaterialSwitchWithText
            android:id="@+id/compose_switch_text_disabled_off"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bricks_java_switch_disabled_off" />

        <org.chromium.chrome.browser.bricks.switches.ComposeMaterialSwitchWithTitleAndSummary
            android:id="@+id/compose_switch_title_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</ScrollView>
